--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -1,3 +1,9 @@
 .btn{
-    background-color: red;
+    display: flex;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 0;
+    background-color: transparent;
+
+    
 }
